<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/main_dark"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toStartOf="@+id/textViewDiameter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewRotation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:text="@string/rotation_period"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toStartOf="@+id/textViewDiameter"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            tools:text="Naboo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewRotationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewRotation"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewRotation"
            app:layout_constraintTop_toBottomOf="@+id/textViewRotation"
            tools:text="26" />



        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#7c7c7c"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNameValue" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewClimate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:text="@string/climate"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewDiameter"
            app:layout_constraintTop_toTopOf="@+id/textViewDiameter" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewPopulation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:text="@string/population"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewOrbit"
            app:layout_constraintTop_toTopOf="@+id/textViewOrbit" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewClimateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewClimate"
            app:layout_constraintStart_toStartOf="@+id/textViewClimate"
            app:layout_constraintTop_toBottomOf="@+id/textViewClimate"
            tools:text="temperate" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewPopulationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewPopulation"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewPopulation"
            app:layout_constraintTop_toBottomOf="@+id/textViewPopulation"
            tools:text="4500000000" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewDiameter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:text="@string/diameter"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toStartOf="@+id/textViewClimate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewName"
            app:layout_constraintTop_toTopOf="@+id/textViewName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewOrbit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/orbital_period"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textViewClimate"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewRotation"
            app:layout_constraintTop_toTopOf="@+id/textViewRotation" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewDiameterValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewDiameter"
            app:layout_constraintStart_toStartOf="@+id/textViewDiameter"
            app:layout_constraintTop_toBottomOf="@+id/textViewDiameter"
            tools:text="12120" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewOrbitValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/textViewPopulation"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewOrbit"
            app:layout_constraintTop_toBottomOf="@+id/textViewOrbit"
            tools:text="312" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>