<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/main_dark"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewName"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toStartOf="@+id/textViewClassification"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="18dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            tools:text="Droid" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewClassification"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/classification"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toStartOf="@+id/textViewDesignation"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewName"
            tools:layout_editor_absoluteY="18dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewClassificationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewClassification"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewClassification"
            app:layout_constraintTop_toBottomOf="@+id/textViewClassification"
            tools:text="artificial" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewDesignation"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/designation"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewClassification"
            tools:layout_editor_absoluteY="18dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewDesignationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewDesignation"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewDesignation"
            app:layout_constraintTop_toBottomOf="@+id/textViewDesignation"
            tools:text="sentient" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>